src/styles/globals/_chapter.css
/* ... */
/* stylelint-disable-next-line max-line-length */
.chapter[font-color="secondary-light"] > :is(h1, h2, h3, h4, h5, h6, p, ul:not(.card-collection), ol:not(.item-collection)),
.chapter[font-color="secondary-light"] > .text-block :is(h1, h2, h3, h4, h5, h6, p, ul:not(.card-collection), ol:not(.item-collection)) {
    --color-headline: var(--color-secondary-light);
    --color-font: var(--color-secondary-light);
    --color-link: var(--color-secondary-light);
    --color-link-hover: var(--color-secondary-dark);
}

/* stylelint-disable-next-line max-line-length */
.chapter[font-color="secondary-dark"] > :is(h1, h2, h3, h4, h5, h6, p, ul:not(.card-collection), ol:not(.item-collection)),
.chapter[font-color="secondary-dark"] > .text-block :is(h1, h2, h3, h4, h5, h6, p, ul:not(.card-collection), ol:not(.item-collection)) {
    --color-headline: var(--color-secondary-dark);
    --color-font: var(--color-secondary-dark);
    --color-link: var(--color-secondary-dark);
    --color-link-hover: var(--color-secondary-light);
}

.chapter[font-color="font"] > :is(h1, h2, h3, h4, h5, h6, p, ul:not(.card-collection), ol:not(.item-collection)),
.chapter[font-color="font"] > .text-block :is(h1, h2, h3, h4, h5, h6, p, ul:not(.card-collection), ol:not(.item-collection)) {
    --color-headline: var(--color-font);
}

.chapter[font-color="font-light"] > :is(h1, h2, h3, h4, h5, h6, p, ul:not(.card-collection), ol:not(.item-collection)),
.chapter[font-color="font-light"] > .text-block :is(h1, h2, h3, h4, h5, h6, p, ul:not(.card-collection), ol:not(.item-collection)) {
    --color-headline: var(--color-font-light);
    --color-font: var(--color-font-light);
    --color-link: var(--color-font-light);
    --color-link-hover: var(--color-font-dark);
}

.chapter[font-color="font-dark"] > :is(h1, h2, h3, h4, h5, h6, p, ul:not(.card-collection), ol:not(.item-collection)),
.chapter[font-color="font-dark"] > .text-block :is(h1, h2, h3, h4, h5, h6, p, ul:not(.card-collection), ol:not(.item-collection)) {
    --color-headline: var(--color-font-dark);
    --color-font: var(--color-font-dark);
    --color-link: var(--color-font-dark);
    --color-link-hover: var(--color-font-light);
}

.chapter[font-color] > :is(ul:not(.card-collection), ol:not(.item-collection)) li::marker,
.chapter[font-color] > .text-block :is(ul:not(.card-collection), ol:not(.item-collection)) li::marker {
    --list-marker-color: var(--color-font);
}

.chapter[min-height="full"] {
    min-height: 100dvh;
}

.chapter[min-height="half"] {
    min-height: 50dvh;
}

.chapter[min-height="third"] {
    min-height: calc(100dvh / 3);
}

.chapter[min-height="quarter"] {
    min-height: 25dvh;
}

.chapter[vertical-position] {
    display: flex;
    flex-direction: column;
}

.chapter[vertical-position="middle"] {
    justify-content: center;
}

.chapter[vertical-position="bottom"] {
    justify-content: flex-end;
}

.chapter[attachment-type="fixed"] {
    --chapter-attachment-type: fixed;
}

.chapter[has-background-media] {
    --chapter-bg-current-image: var(--chapter-bg-image-mobile);

    background-image: var(--chapter-bg-current-image);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: var(--chapter-attachment-type);
}

@container (width >= 480px) {
    .chapter[has-background-media] {
        --chapter-bg-current-image: var(--chapter-bg-image-tablet);
    }
}

@container (width >= 840px) {
    .chapter[has-background-media] {
        --chapter-bg-current-image: var(--chapter-bg-image-desktop);
    }
}

@container (width >= 1280px) {
    .chapter[has-background-media] {
        --chapter-bg-current-image: var(--chapter-bg-image-wide);
    }
}

@container (width >= 1920px) {
    .chapter[has-background-media] {
        --chapter-bg-current-image: var(--chapter-bg-image-original);
    }
}

